--- a/_includes/top-box.html
+++ b/_includes/top-box.html
@@ -1,7 +1,7 @@
  
 <div id="top-box">
   <a href="{{ site.webadresse}}" target="blank" style="text-decoration : none">
-    <img id="uitlogo" align="left" src="../assets/img/uit.png" alt="" > 
+    <img id="uitlogo" align="left" src=url({{ site.uitlogo }}) alt="" > 
    {{ site.uitlogo }} 
     <p id="fagtittel" class="fagtittler"> {{ site.name }} </p>   <!--Se config.yml-->
     <p id="fagundertittel" class="fagtittler"> {{ site.semester }} </p>   <!--Se config.yml-->
