--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-{% include ./navbar.html %}
+{% include navbar.html %}
 <div class="dot"></div>
 <div class="sidenav_button" onclick="openNav()">&#9776; </div>
 
