--- a/_includes/navbar_closed.html
+++ b/_includes/navbar_closed.html
@@ -1,4 +1,4 @@
-{% include_relative ./navbar.html %}
+{% include_relative navbar.html %}
 <div class="dot"></div>
 <div class="sidenav_button" onclick="openNav()">&#9776; </div>
 
