--- a/_includes/css.html
+++ b/_includes/css.html
@@ -30,8 +30,8 @@
     margin-right: -10px;
     padding-bottom: 10px;
     padding-top:70px;
-    background-image: url("{{ site.bilde }}");
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%), url("{{ site.bilde }}");
+    background-image: url("{{ site.image }}");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%), url("{{ site.image }}");
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
