--- a/_includes/top-box.html
+++ b/_includes/top-box.html
@@ -2,7 +2,7 @@
 <div id="top-box">
   <a href="{{ site.webadresse}}" target="blank" style="text-decoration : none">
     <img id="uitlogo" align="left" src="{{ site.uitlogo }} " alt="" > 
-    <p id="fagtittel" class="fagtittler"> {{ site.title }} </p>   <!--Se config.yml-->
+    <p id="fagtittel" class="fagtittler"> {{ site.navn }} </p>   <!--Se config.yml-->
     <p id="fagundertittel" class="fagtittler"> {{ site.semester }} </p>   <!--Se config.yml-->
   </a>
   </div>   
