--- a/_includes/css.html
+++ b/_includes/css.html
@@ -110,11 +110,10 @@ h6{
   height: 100%;
   width: 0%;
   position: fixed;
-  text-align: right;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: transparent;
+  background-color: #111;
   overflow-x: hidden;
   padding-top: 60px;
 
@@ -124,7 +123,7 @@ h6{
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 25px;
   color: #818181;
   display: block;
 
